// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfessionalExperience snapshots should match snapshot for entry without optional fields 1`] = `
<div
  class="p-8 rounded-xl bg-[var(--color-bg-card)] border border-[var(--color-border)]"
>
  <h2
    class="text-2xl font-bold text-[var(--color-text-primary)] mb-6 font-heading"
  >
    Professional Experience
  </h2>
  <div
    class="space-y-8"
  >
    <div
      class="relative pl-6 border-l-2 border-[var(--color-primary)]"
      data-testid="experience-entry-0"
    >
      <div
        class="absolute -left-2 top-0 w-4 h-4 rounded-full bg-[var(--color-primary)]"
      />
      <h3
        class="text-xl font-bold text-[var(--color-text-primary)]"
        data-testid="experience-role-0"
      >
        Intern
      </h3>
      <p
        class="text-base font-medium text-[var(--color-primary)] mt-1"
        data-testid="experience-company-0"
      >
        Minimal Co
      </p>
      <p
        class="text-sm text-[var(--color-text-muted)] mt-1"
        data-testid="experience-timeline-0"
      >
        Jan 2020
         — 
        Present
      </p>
    </div>
  </div>
</div>
`;

exports[`ProfessionalExperience snapshots should match snapshot for multiple experience entries 1`] = `
<div
  class="p-8 rounded-xl bg-[var(--color-bg-card)] border border-[var(--color-border)]"
>
  <h2
    class="text-2xl font-bold text-[var(--color-text-primary)] mb-6 font-heading"
  >
    Professional Experience
  </h2>
  <div
    class="space-y-8"
  >
    <div
      class="relative pl-6 border-l-2 border-[var(--color-primary)]"
      data-testid="experience-entry-0"
    >
      <div
        class="absolute -left-2 top-0 w-4 h-4 rounded-full bg-[var(--color-primary)]"
      />
      <h3
        class="text-xl font-bold text-[var(--color-text-primary)]"
        data-testid="experience-role-0"
      >
        Senior Software Engineer
      </h3>
      <p
        class="text-base font-medium text-[var(--color-primary)] mt-1"
        data-testid="experience-company-0"
      >
        Tech Corp
      </p>
      <p
        class="text-sm text-[var(--color-text-muted)] mt-1"
        data-testid="experience-timeline-0"
      >
        Jan 2022
         — 
        Present
         • San Francisco, CA
      </p>
      <div
        class="mt-3"
        data-testid="experience-description-0"
      >
        <div
          data-testid="mock-markdown-content"
          data-variant="compact"
        >
          Led development of **core platform features** and mentored junior engineers.
        </div>
      </div>
      <ul
        class="mt-3 space-y-2"
        data-testid="experience-achievements-0"
      >
        <li
          class="text-[var(--color-text-secondary)] flex items-start gap-2"
        >
          <span
            class="text-[var(--color-primary)] mt-1.5"
          >
            •
          </span>
          <span>
            Increased system efficiency by 40%
          </span>
        </li>
        <li
          class="text-[var(--color-text-secondary)] flex items-start gap-2"
        >
          <span
            class="text-[var(--color-primary)] mt-1.5"
          >
            •
          </span>
          <span>
            Led team of 5 engineers
          </span>
        </li>
      </ul>
    </div>
    <div
      class="relative pl-6 border-l-2 border-[var(--color-primary)]"
      data-testid="experience-entry-1"
    >
      <div
        class="absolute -left-2 top-0 w-4 h-4 rounded-full bg-[var(--color-primary)]"
      />
      <h3
        class="text-xl font-bold text-[var(--color-text-primary)]"
        data-testid="experience-role-1"
      >
        Software Engineer
      </h3>
      <p
        class="text-base font-medium text-[var(--color-primary)] mt-1"
        data-testid="experience-company-1"
      >
        Startup Inc
      </p>
      <p
        class="text-sm text-[var(--color-text-muted)] mt-1"
        data-testid="experience-timeline-1"
      >
        Jun 2019
         — 
        Dec 2021
      </p>
      <div
        class="mt-3"
        data-testid="experience-description-1"
      >
        <div
          data-testid="mock-markdown-content"
          data-variant="compact"
        >
          Built REST APIs and implemented CI/CD pipelines.
        </div>
      </div>
      <ul
        class="mt-3 space-y-2"
        data-testid="experience-achievements-1"
      >
        <li
          class="text-[var(--color-text-secondary)] flex items-start gap-2"
        >
          <span
            class="text-[var(--color-primary)] mt-1.5"
          >
            •
          </span>
          <span>
            Launched MVP in 3 months
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`ProfessionalExperience snapshots should match snapshot for single experience entry 1`] = `
<div
  class="p-8 rounded-xl bg-[var(--color-bg-card)] border border-[var(--color-border)]"
>
  <h2
    class="text-2xl font-bold text-[var(--color-text-primary)] mb-6 font-heading"
  >
    Professional Experience
  </h2>
  <div
    class="space-y-8"
  >
    <div
      class="relative pl-6 border-l-2 border-[var(--color-primary)]"
      data-testid="experience-entry-0"
    >
      <div
        class="absolute -left-2 top-0 w-4 h-4 rounded-full bg-[var(--color-primary)]"
      />
      <h3
        class="text-xl font-bold text-[var(--color-text-primary)]"
        data-testid="experience-role-0"
      >
        Software Engineer
      </h3>
      <p
        class="text-base font-medium text-[var(--color-primary)] mt-1"
        data-testid="experience-company-0"
      >
        Snapshot Co
      </p>
      <p
        class="text-sm text-[var(--color-text-muted)] mt-1"
        data-testid="experience-timeline-0"
      >
        Jan 2021
         — 
        Dec 2022
      </p>
      <div
        class="mt-3"
        data-testid="experience-description-0"
      >
        <div
          data-testid="mock-markdown-content"
          data-variant="compact"
        >
          Built **amazing** things.
        </div>
      </div>
      <ul
        class="mt-3 space-y-2"
        data-testid="experience-achievements-0"
      >
        <li
          class="text-[var(--color-text-secondary)] flex items-start gap-2"
        >
          <span
            class="text-[var(--color-primary)] mt-1.5"
          >
            •
          </span>
          <span>
            Achievement 1
          </span>
        </li>
        <li
          class="text-[var(--color-text-secondary)] flex items-start gap-2"
        >
          <span
            class="text-[var(--color-primary)] mt-1.5"
          >
            •
          </span>
          <span>
            Achievement 2
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
